added templates for controllers, repositories
